cards correctly update visibility on action call

--- a/src/components/Card/Card.less
+++ b/src/components/Card/Card.less
@@ -1,8 +1,13 @@
-section.info-card {
+.card-track {
   position: relative;
   left: 5%;
   width: 35%;
   height: 55%;
+
+  section.info-card {
+  position: relative;
+  width: 100%;
+  height: 100%;
   min-width: 350px;
 
   border-radius: 4rem;
@@ -23,6 +28,7 @@ section.info-card {
       h2 {
         font-size: 2.5rem;
         margin-bottom: 1rem;
+        text-align: center;
       }
 
       p {
@@ -52,3 +58,9 @@ section.info-card {
       border-radius: 1.5rem;
     }
   }
+
+  .hidden {
+    display: none;
+  }
+}
+
